--- a/html/z_maker.html
+++ b/html/z_maker.html
@@ -7,8 +7,12 @@
     <title>联想私人定制_联想电脑定制机_联想商城</title>
     <link rel="stylesheet" href="../css/z_css/head.css">
     <link rel="stylesheet" href="../css/public.css">
+    <link rel="stylesheet" href="../font/iconfont.css">
+    <link rel="stylesheet" href="../css/swiper.min.css"/>
+    <link rel="stylesheet" href="../css/z_css/maker.css"/>
 </head>
 <body>
+    <!-- 头部 -->
     <div id="z_head">
         <div class="z_header clearfix">
             <ul class="z_cont fl clearfix">
@@ -27,8 +31,54 @@
         	<a href="#" title=""><img src="../img/z_img/maker/logo.jpg" alt="" /></a>
         </div>
     </div>
+    <!-- 导航 -->
+    <div id="z_nav">
+        <div class="z_subnav clearfix">
+            <ul class="nav fl">
+                <li><a href="#">私人定制</a></li>
+                <li><a href="#">急速到家</a></li>
+                <li><a href="#">合伙人</a></li>
+                <li><a href="#">以旧换新</a></li>
+                <li><a href="#">0元试用</a></li>
+                <li><a href="#">企业采购</a></li>
+                <li><a href="#">兑换中心</a></li>
+            </ul>
+            <div class="nav_search">
+                <input type="text" placeholder="联想Z6 青春版"> 
+                <a href="#" class="iconfont">&#xe649;</a>
+            </div>
+            <div class="login fl">
+                <a href="#"><img src="../img/z_img/maker/login.png" alt=""></a>
+            </div>
+            <div class="shopCart fl">
+                <a href="#">&nbsp;</a><span class="cart_count">0</span>
+            </div>
+        </div>
+    </div>
+    <div class="swiper-container" id="z_banner">
+    	<div class="swiper-wrapper">
+	        <div class="swiper-slide banner_1">
+                <div class="z_slide"></div>
+	        </div>
+	        <div class="swiper-slide banner_2">
+	        	<div class="z_slide"></div>
+	        </div>
+	        <div class="swiper-slide banner_3">
+	        	<div class="z_slide"></div>
+	        </div>
+	        <div class="swiper-slide banner_4">
+	        	<div class="z_slide"></div>
+            </div>
+        </div>
+        <div class="swiper-pagination paging"></div>
+	</div>
+	   
+
     <script src="../js/jquery-1.8.3.js"></script>
     <script src="../js/jquery.easing.min.js"></script>
     <script src="../js/z_js/z_head.js"></script>
+    <script src="../js/swiper.min.js"></script>
+    <script src="../js/z_js/z_maker.js"></script>
+    
 </body>
 </html>
