--- a/html/z_srdz.html
+++ b/html/z_srdz.html
@@ -39,8 +39,8 @@
     <div id="z_products1">
         <div class="computer1">
             <ul class="clearfix">
-                <li>
-                    <p class="tips"><span>MX250显卡</span></p>
+                <!-- <li>
+                    <p class="tips"><span>MX250显卡</span></p> style="visibility: hidden"
                     <a href="#" class="list" title="小新 Air 13  湖光蓝">
                         <div class="list_img"><img src="../img/z_img/srdz/list1.jpg" alt=""></div>
                         <p class="name">小新 Air 13  湖光蓝</p>
@@ -93,7 +93,7 @@
                         </p>
                         <p class="price"><span>￥</span><b>5999</b><i>立即购买</i></p>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -107,7 +107,7 @@
     <div id="z_products2">
         <div class="computer2">
             <ul class="clearfix">
-                <li>
+                <!-- <li>
                     <p class="tips"><span>MX250显卡</span></p>
                     <a href="#" class="list" title="小新 Air 13  湖光蓝">
                         <div class="list_img"><img src="../img/z_img/srdz/list1.jpg" alt=""></div>
@@ -161,7 +161,7 @@
                         </p>
                         <p class="price"><span>￥</span><b>5999</b><i>立即购买</i></p>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
@@ -170,7 +170,7 @@
     <div id="z_products_more">
         <div class="products_more">
             <ul class="clearfix">
-                <li>
+                <!-- <li>
                     <p class="tips"><span>MX250显卡</span></p>
                     <a href="#" class="list" title="小新 Air 13  湖光蓝">
                         <div class="list_img"><img src="../img/z_img/srdz/list1.jpg" alt=""></div>
@@ -224,7 +224,7 @@
                         </p>
                         <p class="price"><span>￥</span><b>5999</b><i>立即购买</i></p>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
