--- a/html/z_raise.html
+++ b/html/z_raise.html
@@ -4,102 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>联想私人定制_联想电脑定制机_联想商城</title>
-    <link rel="stylesheet" href="../css/z_css/head.css">
+    <title>联想众筹_互联网众筹平台_电脑新品众筹_联想商城</title>
     <link rel="stylesheet" href="../css/public.css">
-    <link rel="stylesheet" href="../font/iconfont.css">
-    <link rel="stylesheet" href="../css/swiper.min.css"/>
-    <link rel="stylesheet" href="../css/z_css/maker.css"/>
+    <!-- <link rel="stylesheet" href="../css/swiper.min.css"/> -->
+    <link rel="stylesheet" href="../css/z_css/raise.css"/>
     <link rel="stylesheet" href="../css/d_css/exchange_footer.css">
 </head>
 <body>
-    <!-- 头部 -->
-    <div id="z_head">
-        <div class="z_header clearfix">
-            <ul class="z_cont fl clearfix">
-                <li><a href="#">联想首页</a></li>
-                <li><a href="#">商城</a></li>
-                <li><a href="#">社区</a></li>
-                <li><a href="#">服务</a></li>
-                <li><a href="#">资讯</a></li>
-                <li><a href="#">门店</a></li>
-            </ul>
-            <div class="z_phone fl"><a href="#">手机版</a></div>
-            <div class="z_qrCode"></div>
-            <div class="z_news fl"><img src="../img/z_img/maker/horn.png" alt="" /><p><a href="#" title="">会员中心有五亿豪礼任意领，立即查看</a></p></div>
-        </div>
-        <div class="z_logo">
-        	<a href="#" title=""><img src="../img/z_img/maker/logo.jpg" alt="" /></a>
-        </div>
+    <div id="breadcrumb">
+        <ul class="clearfix">
+            <li><a href="#">首页&nbsp;</a></li>
+            <li><a href="#">&gt; 联想众筹</a></li>
+        </ul>
     </div>
-    <!-- 导航 -->
-    <div id="z_nav">
-        <div class="z_subnav clearfix">
-            <ul class="nav fl">
-                <li><a href="#">私人定制</a></li>
-                <li><a href="#">急速到家</a></li>
-                <li><a href="#">合伙人</a></li>
-                <li><a href="#">以旧换新</a></li>
-                <li><a href="#">0元试用</a></li>
-                <li><a href="#">企业采购</a></li>
-                <li><a href="#">兑换中心</a></li>
-            </ul>
-            <div class="nav_search">
-                <input type="text" placeholder="联想Z6 青春版"> 
-                <a href="#" class="iconfont">&#xe649;</a>
-            </div>
-            <div class="login fl">
-                <a href="#"><img src="../img/z_img/maker/login.png" alt=""></a>
-            </div>
-            <div class="shopCart fl">
-                <a href="#">&nbsp;</a><span class="cart_count">0</span>
-            </div>
+    <!-- <div class="swiper-container" id="z_banner">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="#"><img src="../img/z_img/raise/banner.jpg" alt=""></a></div>
         </div>
+        <div class="swiper-pagination"></div>
+    </div> -->
+    <div id="z_banner">
+        <a href="#"><img src="../img/z_img/raise/banner.jpg" alt=""></a>
+        <span class="btn"></span>
     </div>
-    <div class="swiper-container" id="z_banner">
-    	<div class="swiper-wrapper">
-	        <div class="swiper-slide banner_1">
-                <div class="z_slide">
-                    <span>小新</span>
-                    <h3>小新美图定制</h3>
-                    <h4>小新美图定制</h4>
-                    <a href="z_srdz.html"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
+    <div id="z_container" class="clearfix">
+        <div class="product fl"><a href="#"><img src="../img/z_img/raise/banner1.jpg" alt=""></a></div>
+        <div class="joinRaise fr">
+            <p class="joinRaise_top clearfix"><span class="span1"><a href="#">联想小新智能语音鼠标众筹</a></span><span class="span2"><a href="#">参与众筹</a></span></p>
+            <p class="details">新一直致力于给年轻人提供品质、有趣、提升幸福感的产品。本次带来联想小新智能语音鼠标，支持语音打字、实时翻译、语音控制功能，同时应用了蓝光定位技术。语音打字速度可达400字/分钟，两倍于专业速记员的速度！本项目活动至6月30日，支持金额达￥19900即可成功。活动成功后将于7月10日安排发货，如不成功则于7月5日前安排退款。</p>
+            <p class="border"></p>
+            <div class="raiseInfor clearfix">
+                <dl>
+                    <dt class="progress">267.0%</dt>
+                    <dd>进度</dd>
+                </dl>
+                <dl>
+                    <dt class="raiseMoney">￥53133</dt>
+                    <dd>已投金额</dd>
+                </dl>
+                <dl>
+                    <dt class="targetMoney">￥19900</dt>
+                    <dd>目标金额</dd>
+                </dl>
+                <dl>
+                    <dt class="person">261</dt>
+                    <dd>参与人数</dd>
+                </dl>
+                <dl class="lastDays">
+                    <dt>2</dt>
+                    <dd>剩余天数</dd>
+                </dl>
+            </div>
+            <div class="comments">
+                <div class="comments_r">
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
                 </div>
-	        </div>
-	        <div class="swiper-slide banner_2">
-	        	<div class="z_slide">
-                    <span>ThinkPad</span>
-                    <h3>精湛工艺  ，释放创意</h3>
-                    <h4>A面定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
+                <div class="more_comments">
+                    <a href="#">更多评论</a>
                 </div>
-	        </div>
-	        <div class="swiper-slide banner_3">
-	        	<div class="z_slide">
-                    <span>ThinkPad</span>
-                    <h3>ThinkPad专属定制</h3>
-                    <h4>配置、A面、软件、服务、选件，全方位定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
-                </div>
-	        </div>
-	        <div class="swiper-slide banner_4">
-	        	<div class="z_slide">
-                    <span>拯救者</span>
-                    <h3>联想拯救者专属定制</h3>
-                    <h4>拯救者定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
-                </div>
+
             </div>
         </div>
-        <div class="swiper-pagination paging"></div>
     </div>
     <!-- footer -->
     <div id="d_advantager">
@@ -269,9 +245,7 @@
     </div>
     <script src="../js/jquery-1.8.3.js"></script>
     <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/z_js/z_head.js"></script>
-    <script src="../js/swiper.min.js"></script>
-    <script src="../js/z_js/z_maker.js"></script>
-    
+    <!-- <script src="../js/swiper.min.js"></script> -->
+    <script src="../js/z_js/z_raise.js"></script>
 </body>
 </html>
