--- a/html/z_raise.html
+++ b/html/z_raise.html
@@ -24,34 +24,34 @@
         <div class="swiper-pagination"></div>
     </div> -->
     <div id="z_banner">
-        <a href="#"><img src="../img/z_img/raise/banner.jpg" alt=""></a>
+        <a href="z_raise_1.html"><img src="../img/z_img/raise/banner.jpg" alt=""></a>
         <span class="btn"></span>
     </div>
     <div id="z_container" class="clearfix">
-        <div class="product fl"><a href="#"><img src="../img/z_img/raise/banner1.jpg" alt=""></a></div>
+        <div class="product fl"><a href="z_raise_1.html"><img src="../img/z_img/raise/banner1.jpg" alt=""></a></div>
         <div class="joinRaise fr">
-            <p class="joinRaise_top clearfix"><span class="span1"><a href="#">联想小新智能语音鼠标众筹</a></span><span class="span2"><a href="#">参与众筹</a></span></p>
-            <p class="details">新一直致力于给年轻人提供品质、有趣、提升幸福感的产品。本次带来联想小新智能语音鼠标，支持语音打字、实时翻译、语音控制功能，同时应用了蓝光定位技术。语音打字速度可达400字/分钟，两倍于专业速记员的速度！本项目活动至6月30日，支持金额达￥19900即可成功。活动成功后将于7月10日安排发货，如不成功则于7月5日前安排退款。</p>
+            <p class="joinRaise_top clearfix"><span class="span1"><a href="z_raise_1.html"></a></span><span class="span2"><a href="z_raise_1.html">参与众筹</a></span></p>
+            <p class="details"></p>
             <p class="border"></p>
             <div class="raiseInfor clearfix">
                 <dl>
-                    <dt class="progress">267.0%</dt>
+                    <dt class="progress"></dt>
                     <dd>进度</dd>
                 </dl>
                 <dl>
-                    <dt class="raiseMoney">￥53133</dt>
+                    <dt class="raiseMoney"></dt>
                     <dd>已投金额</dd>
                 </dl>
                 <dl>
-                    <dt class="targetMoney">￥19900</dt>
+                    <dt class="targetMoney"></dt>
                     <dd>目标金额</dd>
                 </dl>
                 <dl>
-                    <dt class="person">261</dt>
+                    <dt class="person"></dt>
                     <dd>参与人数</dd>
                 </dl>
                 <dl class="lastDays">
-                    <dt>2</dt>
+                    <dt></dt>
                     <dd>剩余天数</dd>
                 </dl>
             </div>
