--- a/html/z_raise_1.html
+++ b/html/z_raise_1.html
@@ -4,101 +4,213 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>联想私人定制_联想电脑定制机_联想商城</title>
-    <link rel="stylesheet" href="../css/z_css/head.css">
+    <title>联想小新智能语音鼠标众筹- 联想众筹</title>
     <link rel="stylesheet" href="../css/public.css">
-    <link rel="stylesheet" href="../font/iconfont.css">
-    <link rel="stylesheet" href="../css/swiper.min.css"/>
-    <link rel="stylesheet" href="../css/z_css/maker.css"/>
+    <link rel="stylesheet" href="../css/z_css/raise_1.css"/>
+    <link type="text/css" rel="stylesheet" href="../css/z_css/11.css" />
     <link rel="stylesheet" href="../css/d_css/exchange_footer.css">
 </head>
 <body>
-    <!-- 头部 -->
-    <div id="z_head">
-        <div class="z_header clearfix">
-            <ul class="z_cont fl clearfix">
-                <li><a href="#">联想首页</a></li>
-                <li><a href="#">商城</a></li>
-                <li><a href="#">社区</a></li>
-                <li><a href="#">服务</a></li>
-                <li><a href="#">资讯</a></li>
-                <li><a href="#">门店</a></li>
-            </ul>
-            <div class="z_phone fl"><a href="#">手机版</a><div class="z_qrCode"></div></div>
-            <div class="z_news fl"><img src="../img/z_img/maker/horn.png" alt="" /><p><a href="#" title="">会员中心有五亿豪礼任意领，立即查看</a></p></div>
-        </div>
-        <div class="z_logo">
-        	<a href="#" title=""><img src="../img/z_img/maker/logo.jpg" alt="" /></a>
-        </div>
+    <div id="z_breadcrumb">
+        <ul class="clearfix">
+            <li><a href="#">首页&nbsp;</a></li>
+            <li><a href="#">&gt; 联想众筹</a></li>
+        </ul>
     </div>
-    <!-- 导航 -->
-    <div id="z_nav">
-        <div class="z_subnav clearfix">
-            <ul class="nav fl">
-                <li><a href="#">私人定制</a></li>
-                <li><a href="#">急速到家</a></li>
-                <li><a href="#">合伙人</a></li>
-                <li><a href="#">以旧换新</a></li>
-                <li><a href="#">0元试用</a></li>
-                <li><a href="#">企业采购</a></li>
-                <li><a href="#">兑换中心</a></li>
-            </ul>
-            <div class="nav_search">
-                <input type="text" placeholder="联想Z6 青春版"> 
-                <a href="#" class="iconfont">&#xe649;</a>
+    <h1 id="z_title">联想小新智能语音鼠标众筹</h1>
+    <div id="z_container" class="clearfix">
+        <div class="contaniner_img fl">
+            <img src="../img/z_img/raise_1/banner.jpg" alt="">
+        </div>
+        <div class="contaniner_raise">
+            <dl>
+                <dt class="targetMoney">￥19900</dt>
+                <dd>目标金额</dd>
+            </dl>
+            <dl>
+                <dt class="person">261</dt>
+                <dd>支持人数</dd>
+            </dl>
+            <dl>
+                <dt class="lastDays">2</dt>
+                <dd>剩余天数</dd>
+            </dl>
+            <p class="border"></p>
+            <div class="raise_mid clearfix">
+                <p class="fl">
+                    <span class="progress">267.0%</span>
+                    <i>进度</i>
+                </p>
+                <p class="fl">
+                    <span class="raiseMoney">￥53133</span>
+                    <i>已投金额</i>
+                </p>
             </div>
-            <div class="login fl">
-                <a href="#"><img src="../img/z_img/maker/login.png" alt=""></a>
+            <div class="returns">
+                回报时间：众筹成功后<span>2019-07-10</span>开始发货。
             </div>
-            <div class="shopCart fl">
-                <a href="#">&nbsp;</a><span class="cart_count">0</span>
+            <div class="delivery">
+                配送费用：<span>0</span>
             </div>
         </div>
+
     </div>
-    <div class="swiper-container" id="z_banner">
-    	<div class="swiper-wrapper">
-	        <div class="swiper-slide banner_1">
-                <div class="z_slide">
-                    <span>小新</span>
-                    <h3>小新美图定制</h3>
-                    <h4>小新美图定制</h4>
-                    <a href="z_srdz.html"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
+    <div id="z_details" class="clearfix">
+        <div class="details_l fl">
+            <ul class="pro_nav clearfix">
+                <li>项目简介</li>
+                <li>评论</li>
+                <li>参与者</li>
+            </ul>
+            <div class="pro_intro" style="display: none">
+                <div>
+                    <img src="../img/z_img/raise_1/details1.jpg" alt="">
+                    <img src="../img/z_img/raise_1/details2.jpg" alt="">
+                    <img src="../img/z_img/raise_1/details3.jpg" alt="">
+                    <img src="../img/z_img/raise_1/details4.jpg" alt="">
+                </div>   
+            </div>
+            <div class="pro_comments" style="display: none">
+                <div class="publish clearfix">
+                    <textarea name="" id="" placeholder="我来说两句"></textarea>
+                    <a href="#">发表评论</a>
                 </div>
-	        </div>
-	        <div class="swiper-slide banner_2">
-	        	<div class="z_slide">
-                    <span>ThinkPad</span>
-                    <h3>精湛工艺  ，释放创意</h3>
-                    <h4>A面定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
-                </div>
-	        </div>
-	        <div class="swiper-slide banner_3">
-	        	<div class="z_slide">
-                    <span>ThinkPad</span>
-                    <h3>ThinkPad专属定制</h3>
-                    <h4>配置、A面、软件、服务、选件，全方位定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
-                </div>
-	        </div>
-	        <div class="swiper-slide banner_4">
-	        	<div class="z_slide">
-                    <span>拯救者</span>
-                    <h3>联想拯救者专属定制</h3>
-                    <h4>拯救者定制</h4>
-                    <a href="#"><button>开始定制</button></a>
-                    <p>联想私人定制：打造属于你的个性化机型</p>
-                    <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
+                <div class="comments">
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
+                    <dl>
+                        <dt>
+                            <img src="../img/z_img/raise/head.png" alt=""><span>1***0</span><i>2019-06-30 16:59:11</i>
+                        </dt>
+                        <dd>众筹</dd>
+                    </dl>
                 </div>
             </div>
+            <div class="participants">
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>￥199</dt>
+                    <dd>
+                        <i>13***27</i>
+                        <span>2019-06-19 11:50:27</span>
+                    </dd>
+                </dl>
+            </div>
+            <div id="paging1" class="page light-theme simple-pagination">
+                <ul>
+                    <li class="active"><span class="current prev">上一页</span></li>
+                    <li class="active"><span class="current">1</span></li>
+                    <li><a href="#page-2" class="page-link">2</a></li>
+                    <li><a href="#page-3" class="page-link">3</a></li>
+                    <li><a href="#page-4" class="page-link">4</a></li>
+                    <li><a href="#page-5" class="page-link">5</a></li>
+                    <li class="disabled"><span class="ellipse">…</span></li>
+                    <li><a href="#page-9" class="page-link">9</a></li>
+                    <li><a href="#page-10" class="page-link">10</a></li>
+                    <li><a href="#page-2" class="page-link next">下一页</a></li>
+                </ul>
+            </div>
         </div>
-        <div class="swiper-pagination paging"></div>
+        <div class="details_r fr">
+
+        </div>
+
     </div>
     <!-- footer -->
     <div id="d_advantager">
@@ -267,10 +379,30 @@
         </div>
     </div>
     <script src="../js/jquery-1.8.3.js"></script>
-    <script src="../js/jquery.easing.min.js"></script>
-    <script src="../js/z_js/z_head.js"></script>
-    <script src="../js/swiper.min.js"></script>
-    <script src="../js/z_js/z_maker.js"></script>
-    
+    <script type="text/javascript" src="../js/z_js/11.js"></script>
+    <script src="../js/z_js/z_raise_1.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $("#paging1").pagination({
+                items: 100,
+                itemsOnPage: 10,
+                cssStyle: 'light-theme'
+            });
+        });
+        $(function () {
+            $("#paging2").pagination({
+                items: 100,
+                itemsOnPage: 10,
+                cssStyle: 'dark-theme'
+            });
+        });
+        $(function () {
+            $("#paging3").pagination({
+                items: 100,
+                itemsOnPage: 10,
+                cssStyle: 'compact-theme'
+            });
+        });
+    </script>
 </body>
 </html>
