--- a/c_index.html
+++ b/c_index.html
@@ -6,19 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>中国联想首页</title>
     <link rel="stylesheet" href="css/public.css">
+    <!-- 要用的 -->
     <link rel="stylesheet" href="font/iconfont.css">
     <link rel="stylesheet" href="css/c_css/c_head.css">
+    <link rel="stylesheet" href="css/w_css/enter.css">
+
     <link rel="stylesheet" href="css/c_css/c_index.css">
     <link rel="stylesheet" href="css/d_css/exchange_footer.css">
-    <link rel="stylesheet" href="css/w_css/enter.css">
+    
 </head>
 <body>
+
+
+
+<!-- 要用的 -->
     <!-- logo -->
     <img src="img/c_img/logo.jpg" alt="" class="c_logo">
 
     
 
-<!-- 首页登陆 -->
+    <!-- 首页登陆 -->
     <header>
         <div>
             <ul>
@@ -127,6 +134,10 @@
             <h3>注册账号即表示您同意并愿意遵守联想 <i>使用条款</i> 和<i> 隐<br>私权政策</i></h3>
             <em>已有账号<a href="#" class="adv">点此登录></a></em>           
     </div>
+
+
+
+<!-- 不需要复制 -->
 
 <!--BANNER-->
     <div class="banner"id="banner1">
@@ -698,7 +709,7 @@
             </div>
 
 
-
+<!-- 要用的 -->
 <!-- 右边热线栏 -->
 <div class="c_ri">
         <ul class="ull">
@@ -741,9 +752,10 @@
 <script src="js/c_js/jquery-1.8.3.js"></script>
 <script src="js/c_js/c_banner.js"></script>
 <script src="js/c_js/c_ms.js"></script>
-<script src="js/c_js/c_head.js"></script>
 <script src="js/c_js/c_jump.js"></script>
 
+<!-- 要用的 -->
+<script src="js/c_js/c_head.js"></script>
 <script src="js/w_js/W_denglu.js"></script>
 
 
