第一次交易

--- a/html/q_jisudaojia.html
+++ b/html/q_jisudaojia.html
@@ -30,9 +30,7 @@
                             </div>
 
                             <p class="names">
-
                                 拯救者 Y7000 15.6英寸游戏笔记本 黑色
-
                             </p>
 
                             <p class="titile">
@@ -676,6 +674,12 @@
 
         </div>
 
+    </div>
+
+    <div class="lianjie">
+        <div class="lianjie_01">
+            <a href="#">了解更多产品请点击</a>
+        </div>
 
     </div>
 </body>
