--- a/html/x_index01.html
+++ b/html/x_index01.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../font/iconfont.css">
     <link rel="stylesheet" href="../css/z_css/head.css"/>
 
-
 </head>
 <body>
         <div id="z_head">
@@ -72,10 +71,10 @@
             <div class="x_hot-com">企业采购</div>
         </div>
         <div class="x_img">
-            <a><img src="../img/x_img/x_img1/x_img4.jpg"></a>
+            <a href="x_index02.html"><img src="../img/x_img/x_img1/x_img4.jpg"></a>
         </div>
         <div class="x_goodsone">
-            <img src="../img/x_img/x_img1/x_img5.jpg" alt="">
+            <a href="x_index02.html"><img src="../img/x_img/x_img1/x_img5.jpg" alt=""></a> 
             <h3>ThinkPad E480 因特而酷睿i5 笔记本电脑 20KNA001CD</h3>
             <h5>i5-8250U/windows 10/8GB+128G SSD/独</h5>
             <p>￥5399.00</p>
@@ -118,10 +117,10 @@
             <p>￥9499</p>
         </div>
         <div class="x_goodstwo">
-            <img src="../img/x_img/x_img1/x_img9.jpg" alt="">           
+            <a href="x_index02.html"><img src="../img/x_img/x_img1/x_img9.jpg" alt=""></a>                       
             <h3>联想商务双向快充移动电源</h3>
             <h5>10000毫安，18W双向快充，充电效率提升3倍，可同时支持苹果</h5>
-                <p>￥199</p>
+            <p>￥199</p>
         </div>
         
 </div>
@@ -132,7 +131,7 @@
             <div class="x_hot-com">联想企业采购</div>
     </div>
     <div class="x_group-banner">
-        <img src="../img/x_img/x_img1/x_img10.jpg" alt="" >
+      <a href="x_index02.html"> <img src="../img/x_img/x_img1/x_img10.jpg" alt="" </a> >
     </div>
     <div class="x_inter">
         <div class="x_two">
