--- a/html/x_index02.html
+++ b/html/x_index02.html
@@ -7,6 +7,9 @@
 <title>Document</title>
 <link rel="stylesheet" href="../css/public.css">
 <link rel="stylesheet" href="../css/x_css/x_index02.css">
+<link rel="stylesheet" href="../css/w_css/enter.css">
+
+
 </head>
 <body>
 <div class="x_head">
@@ -21,9 +24,9 @@
         <li><a>社区</a></li>
       </ul>
        <input type="text" class="youth" placeholder="联想z6 青春版">
-       <div class="login">
-          <a href="#" >登录</a>
-          <a href="#"class="registered">注册</a>
+       <div class="login-2">
+          <a href="#" class="register" >登录</a>
+          <a href="#"class="login">注册</a>
         </div>
     </div>
 </div>
@@ -147,8 +150,59 @@
        </div>
    </div>
 </div> 
+ <!-- 登录 -->
+ <div class="ppmask"></div>
+ <div class="enter">
+     <div class="tuichu">
+         <a href="" class="tuichu"><svg t="1561792410387" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2340" width="48" height="48"><path d="M512 0c-283.105882 0-512 228.894118-512 512s228.894118 512 512 512 512-228.894118 512-512S795.105882 0 512 0z m222.870588 644.517647c24.094118 24.094118 24.094118 66.258824 0 90.352941-24.094118 24.094118-66.258824 24.094118-90.352941 0l-132.517647-132.517647-132.517647 138.541177c-24.094118 24.094118-66.258824 24.094118-90.352941 0-12.047059-18.070588-18.070588-30.117647-18.070588-48.188236s6.023529-36.141176 18.070588-48.188235l132.517647-132.517647-132.517647-126.494118c-12.047059-18.070588-18.070588-30.117647-18.070588-48.188235 0-18.070588 6.023529-36.141176 18.070588-48.188235 24.094118-24.094118 66.258824-24.094118 90.352941 0l132.517647 132.517647 132.517647-132.517647c24.094118-24.094118 66.258824-24.094118 90.352941 0 24.094118 24.094118 24.094118 66.258824 0 90.352941l-132.517647 132.517647 132.517647 132.517647z" p-id="2341" fill="#8a8a8a"></path></svg></a>
+     </div>
+     <h1>联想会员登录</h1>
+     <form>
+         <input type="text" class="phvl"placeholder="邮箱/手机" id="phonee">
+          </br>
+         <input type="password" class="pwvl" placeholder="密码" id="passw">
+         </br>
+         <input type="checkbox" class="automatic_login">自动登录
+         </br>
+         <button type="submit" class="submita2">登录</button> 
+         </form>
+         <div class="enterwz">
+         <a href="#">手机验证码快捷登录</a>
+         <a href="#" class="zhuce2">立即注册</a>
+         <em>|</em>
+         <a href="#">忘记密码？</a> 
+         </div> 
+         <hr style="width:126px;margin-left: 105px;margin-top:39px;"> 
+         <h2>其它登录方式</h2>
+         <hr style="width:126px;margin-top:39px;">
+         <div class="icon_jfb">
+             <a href=""class="iconfont icon-qq"></a>
+             <a href=""class="iconfont icon-weibo"></a>
+             <a href=""class="iconfont icon-weixin"></a>
+             <a href=""class="iconfont icon-zhifubao"></a>
+         </div>             
+ </div>
+ <!-- 注册 -->
+ <div class="regist">
+         <div class="tuichu">
+             <a href="#" class="zhucedle"><svg t="1561792410387" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2340" width="48" height="48"><path d="M512 0c-283.105882 0-512 228.894118-512 512s228.894118 512 512 512 512-228.894118 512-512S795.105882 0 512 0z m222.870588 644.517647c24.094118 24.094118 24.094118 66.258824 0 90.352941-24.094118 24.094118-66.258824 24.094118-90.352941 0l-132.517647-132.517647-132.517647 138.541177c-24.094118 24.094118-66.258824 24.094118-90.352941 0-12.047059-18.070588-18.070588-30.117647-18.070588-48.188236s6.023529-36.141176 18.070588-48.188235l132.517647-132.517647-132.517647-126.494118c-12.047059-18.070588-18.070588-30.117647-18.070588-48.188235 0-18.070588 6.023529-36.141176 18.070588-48.188235 24.094118-24.094118 66.258824-24.094118 90.352941 0l132.517647 132.517647 132.517647-132.517647c24.094118-24.094118 66.258824-24.094118 90.352941 0 24.094118 24.094118 24.094118 66.258824 0 90.352941l-132.517647 132.517647 132.517647 132.517647z" p-id="2341" fill="#8a8a8a"></path></svg></a>
+         </div> 
+         <h1>注册联想会员</h1>
+         <form>
+             <input type="text" class="phvl" id="usname" placeholder="邮箱/手机">
+              </br>
+             <input type="password" class="pwvl" id="password" placeholder="密码">
+             </br>
+             <input type="password" class="pwvl2" id="password2" placeholder="再次输入密码">
+             </br>
+             <button type="submit" class="submita">立即注册</button> 
+             </form>
+             <h3>注册账号即表示您同意并愿意遵守联想 <i>使用条款</i> 和<i> 隐<br>私权政策</i></h3>
+             <em>已有账号<a href="#" class="adv">点此登录></a></em>           
+     </div>
   <script src="../js/jquery-1.8.3.js"></script>  
   <script src="../js/x_js/x_index02.js"></script>
+  <script src="../js/w_js/w_lipsdl.js"></script>
  
 </body>
 </html>
