--- a/html/c_index.html
+++ b/html/c_index.html
@@ -29,14 +29,14 @@
     <header>
         <div>
             <ul>
-                <li><a href="" href="#">联想首页</a></li>
-                <li><a href="" href="#">商城</a></li>
-                <li><a href="" href="#">社区</a></li>
-                <li><a href="" href="#">服务</a></li>
-                <li><a href="" href="#">咨询</a></li>
-                <li><a href="" href="#">门店</a></li>
-                <li><a href="" href="#">手机版</a></li>
-                <li><a href="" href="#">联想首页</a></li>
+                <li><a href="#">联想首页</a></li>
+                <li><a href="#">商城</a></li>
+                <li><a href="#">社区</a></li>
+                <li><a href="#">服务</a></li>
+                <li><a href="#">咨询</a></li>
+                <li><a href="#">门店</a></li>
+                <li><a href="#">手机版</a></li>
+                <li><a href="#">联想首页</a></li>
             </ul>
             
             <div id="c_dl">
@@ -55,16 +55,16 @@
     <div class="nav">
         <div class="c_nav">
             <ul id="na_ul">
-                <li class="na_li"><a href="" href="#">私人定制</a></li>
-                <li class="na_li"><a href="" href="#">极速到家</a></li>
-                <li class="na_li"><a href="" href="#">合伙人</a></li>
-                <li class="na_li"><a href="" href="#">以旧换新</a></li>
-                <li class="na_li"><a href="" href="#">企业采购</a></li>
-                <li class="na_li"><a href="" href="#">兑换中心</a></li>
-                <li class="na_li"><a href="" href="#">中心</a></li>
+                <li class="na_li"><a href="#">私人定制</a></li>
+                <li class="na_li"><a href="#">极速到家</a></li>
+                <li class="na_li"><a href="#">合伙人</a></li>
+                <li class="na_li"><a href="#">以旧换新</a></li>
+                <li class="na_li"><a href="#">企业采购</a></li>
+                <li class="na_li"><a href="#">兑换中心</a></li>
+                <li class="na_li"><a href="#">中心</a></li>
             </ul>
             <div class="nav_ss">
-                   <input type="text" name="" id="" placeholder="联想Z6 青春版"> 
+                   <input type="text" name="" placeholder="联想Z6 青春版"> 
                    <a href="#" class="iconfont">&#xe649;</a>
             </div>
             
@@ -77,7 +77,7 @@
                 </div> 
             <a class="iconfont" id="sous2">&#xe649;</a>
             <div id="c_ssk">
-                <input type="text" name="" id="">
+                <input type="text" name="">
                 <span id="c_stop">X</span>
             </div>
         </div>
@@ -191,7 +191,7 @@
                             </div>
                             <div>
                                     <p><a href="">专属配件</a></p>
-                                    <p><a href="">联想S5手机保护壳</a><a href="">联想Z5手机保护壳</a><a href="">摩玩-游戏手柄模块</<a><a href=""Watch X plus智能手表</a></p>
+                                    <p><a href="">联想S5手机保护壳</a><a href="">联想Z5手机保护壳</a><a href="">摩玩-游戏手柄模块</<a><a href=""Watch X plus智能手表></a></p>
                                 </div>
                                 <div>
                                         <p><a href="">K歌直播</a></p>
