--- a/html/q_zhengjiuzhe.html
+++ b/html/q_zhengjiuzhe.html
@@ -31,14 +31,14 @@
     <header>
         <div>
             <ul>
-                <li><a href="" href="#">联想首页</a></li>
-                <li><a href="" href="#">商城</a></li>
-                <li><a href="" href="#">社区</a></li>
-                <li><a href="" href="#">服务</a></li>
-                <li><a href="" href="#">咨询</a></li>
-                <li><a href="" href="#">门店</a></li>
-                <li><a href="" href="#">手机版</a></li>
-                <li><a href="" href="#">联想首页</a></li>
+                <li><a href="c_index.html">联想首页</a></li>
+                <li><a href="#">商城</a></li>
+                <li><a href="#">社区</a></li>
+                <li><a href="#">服务</a></li>
+                <li><a href="#">咨询</a></li>
+                <li><a href="#">门店</a></li>
+                <li><a href="#">手机版</a></li>
+                <li><a href="#">联想首页</a></li>
             </ul>
 
             <div id="c_dl">
@@ -57,16 +57,16 @@
     <div class="nav">
         <div class="c_nav">
             <ul id="na_ul">
-                <li class="na_li"><a href="" href="#">私人定制</a></li>
-                <li class="na_li"><a href="" href="#">极速到家</a></li>
-                <li class="na_li"><a href="" href="#">合伙人</a></li>
-                <li class="na_li"><a href="" href="#">以旧换新</a></li>
-                <li class="na_li"><a href="" href="#">企业采购</a></li>
-                <li class="na_li"><a href="" href="#">兑换中心</a></li>
-                <li class="na_li"><a href="" href="#">中心</a></li>
+                <li class="na_li"><a href="z_maker.html">私人定制</a></li>
+                <li class="na_li"><a href="q_jisuindex.html">极速到家</a></li>
+                <li class="na_li"><a href="w_partner.html">合伙人</a></li>
+                <li class="na_li"><a href="d_oldtonew.html">以旧换新</a></li>
+                <li class="na_li"><a href="x_index01.html">企业采购</a></li>
+                <li class="na_li"><a href="d_exchange.html">兑换中心</a></li>
+                <li class="na_li"><a href="z_raise.html">众筹</a></li>
             </ul>
             <div class="nav_ss">
-                <input type="text" name="" id="" placeholder="联想Z6 青春版">
+                <input type="text" name="" placeholder="联想Z6 青春版">
                 <a href="#" class="iconfont">&#xe649;</a>
             </div>
 
@@ -80,7 +80,7 @@
             </div>
             <a class="iconfont" id="sous2">&#xe649;</a>
             <div id="c_ssk">
-                <input type="text" name="" id="">
+                <input type="text" name="">
                 <span id="c_stop">X</span>
             </div>
         </div>
