--- a/html/w_Lipstick.html
+++ b/html/w_Lipstick.html
@@ -19,7 +19,7 @@
             <a href="#"><img src="../img/w_img/w_img2/think_logo.png"></a>
             <div class="w_navOne">
                 <ul>
-                    <li><a href="#">联想商城</a></li>
+                    <li><a href="c_index.html">联想商城</a></li>
                     <li><a href="#">Think官网</a></li>
                     <li><a href="#">极速到家</a></li>
                     <li><a href="#">专属定制</a></li>
