--- a/html/x_index02.html
+++ b/html/x_index02.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="../css/public.css">
 <link rel="stylesheet" href="../css/x_css/x_index02.css">
 <link rel="stylesheet" href="../css/w_css/enter.css">
+<link rel="stylesheet" href="../css/d_css/exchange_footer.css">
+
 
 
 </head>
@@ -16,7 +18,7 @@
     <div class="x_head-main">
       <img src="../img/x_img/x_img2/small7.png">
       <ul class="shoop">
-        <li><a>联想商城</a></li>
+        <li><a href="c_index.html">联想商城</a></li>
         <li><a>Think官网</a></li>
         <li><a>极速到家</a></li>
         <li><a>专属定制</a></li>
@@ -150,6 +152,192 @@
        </div>
    </div>
 </div> 
+ <div class="x_bottom">
+     <div class="x_bottom-main clearfix">
+         <div class="x_bot01">ThinkPad T480 英特尔酷睿i5 笔记本电脑 20L5001SCD</div>
+         <ul class="x_bot02 clearfix">
+             <li class="x_bot03">商品详情</li>
+             <li>配置信息</li>
+             <li>商品评价(1345)</li>
+             <li>服务支持</li>
+             <li class="x_bot04">立即抢购</li>        
+         </ul>   
+     </div>
+ </div>
+ <div class="x_bot05"><img src="../img/x_img/x_img2/big10.jpg" alt="" ></div>
+ <div class="x_bot06"><img src="../img/x_img/x_img2/big7.jpg" alt="" ></div>
+ <div class="x_bot07"><img src="../img/x_img/x_img2/big8.jpg" alt="" ></div>
+   
+<div id="d_advantager">
+    <div id="d_advantage">
+        <img src="../img/d_img/d_img31.jpg" alt="">
+    </div>
+</div>
+<div class="d_detailer">
+    <div class="d_detail clearfix">
+        <dl class="d_guidance">
+            <dt>购物指南</dt>
+            <dd><a href="#">服务商信息</a></dd>
+            <dd><a href="#">购买流程</a></dd>
+            <dd><a href="#">注册登录</a></dd>
+        </dl>
+    <dl class="d_guidance">
+            <dt>配送方式</dt>
+            <dd><a href="#">配送方式</a></dd>
+            <dd><a href="#">配送方式信息</a></dd>
+            <dd><a href="#">签收原则</a></dd>
+            <dd><a href="#">物流查询</a></dd>
+    </dl>
+    <dl class="d_guidance">
+            <dt>支付方式</dt>
+            <dd><a href="#">分期支付</a></dd>
+            <dd><a href="#">支付方式</a></dd>
+            <dd><a href="#">支付问题</a></dd>
+    </dl>
+    <dl class="d_guidance">
+            <dt>订单信息</dt>
+            <dd><a href="#">订单信息</a></dd>
+            <dd><a href="#">发票信息</a></dd>
+    </dl>
+    <dl class="d_guidance">
+            <dt>售后服务</dt>
+            <dd><a href="#">售后服务总则</a></dd>
+            <dd><a href="#">24小时在线客服</a></dd>
+            <dd><a href="#">手机激活查询</a></dd>
+    </dl>
+    <dl class="d_guidance">
+            <dt>其他说明</dt>
+            <dd><a href="#">服务承诺</a></dd>
+            <dd><a href="#">账户安全</a></dd>
+            <dd><a href="#">手机产品购买须知</a></dd>
+            <dd><a href="#">环境信息</a></dd>
+    </dl>
+    </div>
+</div>
+
+<div class=d_footer>
+    <div class="d_foot clearfix">
+        <dl class="d_footdl">
+            <dt>关于联想</dt>
+            <dd><a href="#">投资者关系</a></dd>
+            <dd><a href="#">工作关系</a></dd>
+            <dd><a href="#">联系我们</a></dd>
+            <dd><a href="#">销售网点查询</a></dd>
+            <dd><a href="#">服务网点查询</a></dd>
+        </dl>
+        <dl class="d_footdl">
+                <dt>联想商城</dt>
+                <dd><a href="#">0元试用</a></dd>
+                <dd><a href="#">极速到家</a></dd>
+                <dd><a href="#">联想合伙人</a></dd>
+                <dd><a href="#">私人定制</a></dd>
+                <dd><a href="#">以旧换新</a></dd>
+                <dd><a href="#">联想众筹</a></dd>
+        </dl>
+        <dl class="d_footdl">
+                <dt>联想服务</dt>
+                <dd><a href="#">驱动与软件下载</a></dd>
+                <dd><a href="#">联想知识库</a></dd>
+                <dd><a href="#">24小时只能客服</a></dd>
+                <dd><a href="#">保修配置查询</a></dd>
+                <dd><a href="#">服务政策查询</a></dd>
+                <dd><a href="#">上门快修</a></dd>
+                <dd><a href="#">延长保修</a></dd>
+                <dd><a href="#">联想IT管理服务</a></dd>
+        </dl>
+        <dl class="d_footdl">
+                <dt>联想网站群</dt>
+                <dd><a href="#">联想创投</a></dd>
+                <dd><a href="#">聚享汇</a></dd>
+                <dd><a href="#">联想电脑管家</a></dd>
+                <dd><a href="#">联想超融合</a></dd>
+                <dd><a href="#">联想研究院</a></dd>
+                <dd><a href="#">智慧医疗</a></dd>
+                <dd><a href="#">联想百应平台</a></dd>
+                <dd><a href="#">联想租赁商城</a></dd>
+                <dd><a href="#">联想企业网盘</a></dd>
+                <dd><a href="#">ThinkPad官网</a></dd>
+                <dd><a href="#">lecoo商城</a></dd>
+                <dd><a href="#">联想大数据</a></dd>
+        </dl>
+        <div class="d_contact">
+            <div class="til">联想官方社交平台</div>
+            <ul class="conlist clearfix">
+                <li id="d_icon1">
+                    <p class='darkqqzone'></p>
+                    <p class='lightqqzone'></p>
+                </li>
+                <li id="d_icon2">
+                    <p  class='darkweibo'></p>
+                    <p  class='lightweibo'></p>
+                </li> 
+                <li id="d_icon3">
+                    <p class='darktriangle'></p>
+                    <p class='lighttriangle'></p>
+                </li> 
+            </ul>
+            <div id="contacticon">
+                <a id="contacticon_left" href="#">
+                    <p class='darkyqweibo'></p>
+                        <p class="lightyqweibo"></p>
+                </a>
+                <a id="contacticon_right" href="#">
+                    <p class='darktieba'></p>
+                    <p class="lighttieba"></p>
+                </a>
+            </div>
+            <div class="selectcountry">
+                    选择国家和地区 
+            </div>
+            <div class='d_countries'>
+                <div class="all_countries">
+                    <ul>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Algeria</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Angola</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Argentina</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Austrilia</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Austria</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Bahrain</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Bangladesh</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">Belarus</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                        <li><a href="https://www.lenovo.com/dz/fr/">America</a></li>
+                    </ul>
+                </div>
+                <div id="cnimg"></div>
+            </div>
+            
+        </div>
+    
+</div>   
+</div>
+<div class='d_bottom'>
+    <div class="d_bot clearfix">
+        <p class="d_bot_left">版权所有:1998-2019 
+            <a href="#">联想集团</a>
+            <a href="#">法律公告</a>
+            <a href="#">隐私权政策</a>
+            <a href="#">产品安全</a>
+        </p>
+        <p class="d_bot_right">
+            <span>京ICP备11035381</span>
+            <span>京公网安备110108007970号</span>
+            <span>营业执照:110000410127232</span>
+        </p>
+    </div>      
+</div>
+  
+
+
  <!-- 登录 -->
  <div class="ppmask"></div>
  <div class="enter">
@@ -203,6 +391,7 @@
   <script src="../js/jquery-1.8.3.js"></script>  
   <script src="../js/x_js/x_index02.js"></script>
   <script src="../js/w_js/w_lipsdl.js"></script>
- 
+  <script src="../js/d_js/jquery-1.8.3.min.js"></script>
+  <script src="../js/d_js/d_exchange.js"></script>
 </body>
 </html>
