--- a/html/c_index.html
+++ b/html/c_index.html
@@ -29,7 +29,7 @@
     <header>
         <div>
             <ul>
-                <li><a href="#">联想首页</a></li>
+                <li><a href="c_index.html">联想首页</a></li>
                 <li><a href="#">商城</a></li>
                 <li><a href="#">社区</a></li>
                 <li><a href="#">服务</a></li>
@@ -55,13 +55,13 @@
     <div class="nav">
         <div class="c_nav">
             <ul id="na_ul">
-                <li class="na_li"><a href="#">私人定制</a></li>
-                <li class="na_li"><a href="#">极速到家</a></li>
-                <li class="na_li"><a href="#">合伙人</a></li>
-                <li class="na_li"><a href="#">以旧换新</a></li>
-                <li class="na_li"><a href="#">企业采购</a></li>
-                <li class="na_li"><a href="#">兑换中心</a></li>
-                <li class="na_li"><a href="#">中心</a></li>
+                <li class="na_li"><a href="z_maker.html">私人定制</a></li>
+                <li class="na_li"><a href="q_jisuindex.html">极速到家</a></li>
+                <li class="na_li"><a href="w_partner.html">合伙人</a></li>
+                <li class="na_li"><a href="d_oldtonew.html">以旧换新</a></li>
+                <li class="na_li"><a href="x_index01.html">企业采购</a></li>
+                <li class="na_li"><a href="d_exchange.html">兑换中心</a></li>
+                <li class="na_li"><a href="z_raise.html">众筹</a></li>
             </ul>
             <div class="nav_ss">
                    <input type="text" name="" placeholder="联想Z6 青春版"> 
