--- a/html/x_index01.html
+++ b/html/x_index01.html
@@ -15,7 +15,7 @@
         <div id="z_head">
                 <div class="z_header clearfix">
                     <ul class="z_cont fl clearfix">
-                        <li><a href="#">联想首页</a></li>
+                        <li><a href="c_index.html">联想首页</a></li>
                         <li><a href="#">商城</a></li>
                         <li><a href="#">社区</a></li>
                         <li><a href="#">服务</a></li>
@@ -34,13 +34,13 @@
     <div id="z_nav">
             <div class="z_subnav clearfix">
                 <ul class="nav fl">
-                    <li><a href="#">私人定制</a></li>
-                    <li><a href="#">急速到家</a></li>
-                    <li><a href="#">合伙人</a></li>
-                    <li><a href="#">以旧换新</a></li>
-                    <li><a href="#">0元试用</a></li>
-                    <li><a href="#">企业采购</a></li>
-                    <li><a href="#">兑换中心</a></li>
+                    <li class="na_li"><a href="z_maker.html">私人定制</a></li>
+                    <li class="na_li"><a href="q_jisuindex.html">极速到家</a></li>
+                    <li class="na_li"><a href="w_partner.html">合伙人</a></li>
+                    <li class="na_li"><a href="d_oldtonew.html">以旧换新</a></li>
+                    <li class="na_li"><a href="x_index01.html">企业采购</a></li>
+                    <li class="na_li"><a href="d_exchange.html">兑换中心</a></li>
+                    <li class="na_li"><a href="z_raise.html">众筹</a></li>
                 </ul>
                 <div class="nav_search">
                     <input type="text" placeholder="联想Z6 青春版"> 
