--- a/html/z_maker.html
+++ b/html/z_maker.html
@@ -17,23 +17,14 @@
     <div id="z_head">
         <div class="z_header clearfix">
             <ul class="z_cont fl clearfix">
-                <li><a href="#">联想首页</a></li>
+                <li><a href="c_index.html">联想首页</a></li>
                 <li><a href="#">商城</a></li>
                 <li><a href="#">社区</a></li>
                 <li><a href="#">服务</a></li>
                 <li><a href="#">资讯</a></li>
                 <li><a href="#">门店</a></li>
             </ul>
-<<<<<<< HEAD
             <div class="z_phone fl"><a href="#">手机版</a><div class="z_qrCode"></div></div>
-=======
-<<<<<<< HEAD
-            <div class="z_phone fl"><a href="#">手机版</a></div>
-            <div class="z_qrCode"></div>
-=======
-            <div class="z_phone fl"><a href="#">手机版</a><div class="z_qrCode"></div></div>
->>>>>>> 188f47f198ed591dff9345e7ceee283e991d6760
->>>>>>> df23f331e363bd9bee0c3cbafa391e6c3510b193
             <div class="z_news fl"><img src="../img/z_img/maker/horn.png" alt="" /><p><a href="#" title="">会员中心有五亿豪礼任意领，立即查看</a></p></div>
         </div>
         <div class="z_logo">
@@ -44,13 +35,13 @@
     <div id="z_nav">
         <div class="z_subnav clearfix">
             <ul class="nav fl">
-                <li><a href="#">私人定制</a></li>
-                <li><a href="#">急速到家</a></li>
-                <li><a href="#">合伙人</a></li>
-                <li><a href="#">以旧换新</a></li>
-                <li><a href="#">0元试用</a></li>
-                <li><a href="#">企业采购</a></li>
-                <li><a href="#">兑换中心</a></li>
+                <li class="na_li"><a href="z_maker.html">私人定制</a></li>
+                <li class="na_li"><a href="q_jisuindex.html">极速到家</a></li>
+                <li class="na_li"><a href="w_partner.html">合伙人</a></li>
+                <li class="na_li"><a href="d_oldtonew.html">以旧换新</a></li>
+                <li class="na_li"><a href="x_index01.html">企业采购</a></li>
+                <li class="na_li"><a href="d_exchange.html">兑换中心</a></li>
+                <li class="na_li"><a href="z_raise.html">众筹</a></li>
             </ul>
             <div class="nav_search">
                 <input type="text" placeholder="联想Z6 青春版"> 
@@ -71,15 +62,7 @@
                     <span>小新</span>
                     <h3>小新美图定制</h3>
                     <h4>小新美图定制</h4>
-<<<<<<< HEAD
                     <a href="z_srdz.html"><button>开始定制</button></a>
-=======
-<<<<<<< HEAD
-                    <a href="#"><button>开始定制</button></a>
-=======
-                    <a href="z_srdz.html"><button>开始定制</button></a>
->>>>>>> 188f47f198ed591dff9345e7ceee283e991d6760
->>>>>>> df23f331e363bd9bee0c3cbafa391e6c3510b193
                     <p>联想私人定制：打造属于你的个性化机型</p>
                     <p>你想参与本本的外观、配置选择吗？你想你的本本与众不同吗？联想私人定制，一键满足你的需求。</p>
                 </div>
@@ -138,7 +121,7 @@
                 <dd><a href="#">签收原则</a></dd>
                 <dd><a href="#">物流查询</a></dd>
         </dl>
-        <dl class="d_guidance"> 
+        <dl class="d_guidance">
                 <dt>支付方式</dt>
                 <dd><a href="#">分期支付</a></dd>
                 <dd><a href="#">支付方式</a></dd>
