--- a/html/z_srdz.html
+++ b/html/z_srdz.html
@@ -7,18 +7,69 @@
     <title>小新私人定制</title>
     <link rel="stylesheet" href="../css/public.css">
     <link rel="stylesheet" href="../css/z_css/srdz.css">
+    <!-- 登录 -->
+    <link rel="stylesheet" href="../css/w_css/enter.css">
 </head>
 <body>
     <div id="z_head">
         <div class="z_header">
             <ul class="clearfix">
                 <li><a href="#">购物车</a><span>0</span></li>
-                <li><a href="#">登录</a></li>
-                <li><a href="#">商城首页</a></li>
-                <li><a href="#">联想首页</a></li>
+                <li><a href="#" class="register">登录</a></li>
+                <li><a href="c_index.html">商城首页</a></li>
+                <li><a href="c_index.html">联想首页</a></li>
             </ul>
             <p class="z_logo"><a href="#"><img src="../img/z_img/maker/logo.jpg" alt=""></a></p>
-
+        </div>
+        <!-- 登录 -->
+    <div class="ppmask"></div>
+    <div class="enter">
+        <div class="tuichu">
+            <a  class="tuichu"><svg t="1561792410387" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2340" width="48" height="48"><path d="M512 0c-283.105882 0-512 228.894118-512 512s228.894118 512 512 512 512-228.894118 512-512S795.105882 0 512 0z m222.870588 644.517647c24.094118 24.094118 24.094118 66.258824 0 90.352941-24.094118 24.094118-66.258824 24.094118-90.352941 0l-132.517647-132.517647-132.517647 138.541177c-24.094118 24.094118-66.258824 24.094118-90.352941 0-12.047059-18.070588-18.070588-30.117647-18.070588-48.188236s6.023529-36.141176 18.070588-48.188235l132.517647-132.517647-132.517647-126.494118c-12.047059-18.070588-18.070588-30.117647-18.070588-48.188235 0-18.070588 6.023529-36.141176 18.070588-48.188235 24.094118-24.094118 66.258824-24.094118 90.352941 0l132.517647 132.517647 132.517647-132.517647c24.094118-24.094118 66.258824-24.094118 90.352941 0 24.094118 24.094118 24.094118 66.258824 0 90.352941l-132.517647 132.517647 132.517647 132.517647z" p-id="2341" fill="#8a8a8a"></path></svg></a>
+        </div>
+        <h1>联想会员登录</h1>
+        <form>
+            <input type="text" class="phvl" placeholder="邮箱/手机" id="phonee">
+            <br>
+            <input type="password" class="pwvl" placeholder="密码" id="passw">
+            <br>
+            <input type="checkbox" class="automatic_login">自动登录
+            <br>
+            <button type="submit" class="submita2">登录</button> 
+        </form>
+        <div class="enterwz">
+            <a href="#">手机验证码快捷登录</a>
+            <a href="#" class="zhuce2">立即注册</a>
+            <em>|</em>
+            <a href="#">忘记密码？</a> 
+        </div> 
+            <hr style="width:126px;margin-left: 105px;margin-top:39px;"> 
+            <h2>其它登录方式</h2>
+            <hr style="width:126px;margin-top:39px;">
+        <div class="icon_jfb">
+                <a href="" class="iconfont icon-qq"></a>
+                <a href="" class="iconfont icon-weibo"></a>
+                <a href="" class="iconfont icon-weixin"></a>
+                <a href="" class="iconfont icon-zhifubao"></a>
+        </div>             
+    </div>
+    <!-- 注册 -->
+    <div class="regist">
+        <div class="tuichu">
+            <a  class="zhucedle"><svg t="1561792410387" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2340" width="48" height="48"><path d="M512 0c-283.105882 0-512 228.894118-512 512s228.894118 512 512 512 512-228.894118 512-512S795.105882 0 512 0z m222.870588 644.517647c24.094118 24.094118 24.094118 66.258824 0 90.352941-24.094118 24.094118-66.258824 24.094118-90.352941 0l-132.517647-132.517647-132.517647 138.541177c-24.094118 24.094118-66.258824 24.094118-90.352941 0-12.047059-18.070588-18.070588-30.117647-18.070588-48.188236s6.023529-36.141176 18.070588-48.188235l132.517647-132.517647-132.517647-126.494118c-12.047059-18.070588-18.070588-30.117647-18.070588-48.188235 0-18.070588 6.023529-36.141176 18.070588-48.188235 24.094118-24.094118 66.258824-24.094118 90.352941 0l132.517647 132.517647 132.517647-132.517647c24.094118-24.094118 66.258824-24.094118 90.352941 0 24.094118 24.094118 24.094118 66.258824 0 90.352941l-132.517647 132.517647 132.517647 132.517647z" p-id="2341" fill="#8a8a8a"></path></svg></a>
+        </div> 
+        <h1>注册联想会员</h1>
+        <form>
+            <input type="text" class="phvl" id="usname" placeholder="邮箱/手机">
+            <br>
+            <input type="password" class="pwvl" id="password" placeholder="密码">
+            <br>
+            <input type="password" class="pwvl2" id="password2" placeholder="再次输入密码">
+            <br>
+            <button type="submit" class="submita">立即注册</button> 
+            </form>
+            <h3>注册账号即表示您同意并愿意遵守联想 <i>使用条款</i> 和<i> 隐<br>私权政策</i></h3>
+            <em>已有账号<a href="#" class="adv">点此登录></a></em>           
         </div>
     </div>
     <div id="z_banner"></div>
@@ -230,5 +281,6 @@
     </div>
     <script src="../js/jquery-1.8.3.js"></script>
     <script src="../js/z_js/z_srdz.js"></script>
+    <script src="../js/z_js/z_denglu.js"></script>
 </body>
 </html>
